# SpecterTest

./: README.md  docker-compose.yml  process_logo.html  project_summary.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  config.py
backend/app/api/: report.py  scan.py  simulation.py
backend/app/models/: __init__.py  agent.py  finding.py  route.py  scan.py
backend/app/services/: agent_manager.py  crawler.py  llm_client.py  sse_manager.py  swarm_engine.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/.vite/deps_temp_8b1bad3d/: _metadata.json
frontend/public/: output.css
frontend/src/: App.vue  style.css
frontend/src/router/: index.js
frontend/src/views/: BindingView.vue  ReportView.vue  SimulationView.vue
